# Actuator-Control

./: .gitignore  Cargo.toml  README.md  pyproject.toml
actuator_control/: __init__.py  api.py  common.py  erob.py  protocol.py  robstride.py  robstride_protocol.py  robstride_table.py  sito.py
actuator_control/erob/: __init__.py  bus.py  protocol.py
actuator_control/robstride/: __init__.py  bus.py  protocol.py
actuator_control/sito/: __init__.py  bus.py  protocol.py
examples/: canup.sh  discover_actuators.py  move_erob.py  move_robstride.py  move_sito.py  test_robstride.py  test_sito.py
examples/actuator_characterization/: README.md  generate_test_signal.py  run_erob_characterization.py
src/: erob.rs  lib.rs  python.rs  robstride.rs  sito.rs
src/core/: error.rs  mod.rs  scheduling.rs  socketcan.rs  types.rs
src/protocol/: erob.rs  mod.rs  robstride.rs  sito.rs
