[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "actuator-control"
version = "0.2.0"
description = "Unified CAN actuator control helpers for eRob, Robstride, and Sito motors."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepdiff",
    "loop-rate-limiters",
    "numpy",
    "python-can",
    "tqdm",
]

[project.optional-dependencies]
examples = [
    "matplotlib",
]

[tool.hatchling.build.targets.wheel]
packages = ["actuator_control"]
