[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "actuator-control"
version = "0.5.0"
description = "Unified CAN actuator control helpers for eRob, Robstride, and Sito actuators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[project.optional-dependencies]
examples = [
    "loop-rate-limiters",
    "numpy",
    "matplotlib",
    "tqdm",
]

[tool.maturin]
python-source = "."
module-name = "actuator_control._rust"
